# ZkPatternMatcher

./: .gitignore  .zkpm.toml.example  .zkpmignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST_MATRIX.md  LICENSE  LIMITATIONS.md  PATTERN_GUIDE.md  QUICKSTART.md  README.md  REGEX_REFERENCE.md  ROADMAP.md  SELF_REVIEW.md  test_extended_patterns.sh  test_integration.sh  test_real_vulnerabilities.sh  validate.sh  validate_all.sh  zkpm-demo.tape
.github/workflows/: ci.yml
crates/pattern-loader/: Cargo.toml  README.md
crates/pattern-loader/src/: lib.rs
crates/pattern-matcher/: Cargo.toml  README.md
crates/pattern-matcher/src/: lib.rs  semantic.rs
crates/pattern-types/: Cargo.toml  README.md
crates/pattern-types/src/: lib.rs
docs/: ARCHITECTURE.md  CHANGELOG.md  CODE_REVIEW.md  INDEX.md  SECURITY.md
docs/development/: CODE_REVIEW.md  README.md  ROADMAP.md
docs/guides/: QUICKSTART.md  README.md
docs/patterns/: PATTERN_CONFIDENCE.md  PATTERN_GUIDE.md  README.md  REAL_VULN_SOURCES.md
docs/reference/: LIMITATIONS.md  PATTERN_SCHEMA.md  PATTERN_VALIDATION.md  README.md  REGEX_REFERENCE.md
examples/: vulnerable.circom
patterns/: EXTENDED_PATTERNS.md  TEMPLATE.yaml  array_bounds.yaml  commitment_soundness.yaml  cve_stealthdrop.yaml  equality_check.yaml  extended_vulnerabilities.yaml  improved_patterns.yaml  merkle_path.yaml  missing_iszero.yaml  production.yaml  public_input_validation.yaml  real_vulnerabilities.yaml  signal_aliasing.yaml  unchecked_division.yaml  underconstrained.yaml
scripts/: README.md  publish.sh  test_extended_patterns.sh  test_integration.sh  test_real_vulnerabilities.sh
src/: config.rs  lib.rs  loader.rs  matcher.rs  output.rs  sarif.rs  scanner.rs  types.rs
tests/: cli_integration_tests.rs  integration_tests.rs  pattern_integration_tests.rs  real_vulnerability_tests.rs  real_world_validation_matrix_tests.rs  realistic_workflow_tests.rs  safe_circuit_tests.rs  semantic_integration_tests.rs  strict_severity_tests.rs
tests/real_vulnerabilities/: README.md  arithmetic_overflow_real.circom  array_no_bounds.circom  equality_no_constraint.circom  missing_iszero.circom  missing_range_check.circom  nullifier_collision_real.circom  signal_aliasing.circom  unbounded_loop.circom  unchecked_division.circom  underconstrained_merkle_real.circom  underconstrained_multiplier.circom  weak_nullifier.circom
tests/real_vulnerabilities/commitment_soundness/: commitment_safe.circom  deterministic_commit_vuln.circom  nullifier_no_secret_vuln.circom
tests/real_vulnerabilities/merkle_path/: merkle_safe.circom  unconstrained_direction_vuln.circom
tests/safe_circuits/: safe_merkle.circom  safe_multiplier.circom
