[package]
name = "zk-pattern-matcher"
version = "0.1.0"
edition = "2021"
authors = ["Teycir Ben Soltane <teycir@pxdmail.net>"]
license = "MIT"
description = "A pattern matching library for Zero-Knowledge proof vulnerability detection"
repository = "https://github.com/teycir/ZkPatternMatcher"
keywords = ["zero-knowledge", "security", "vulnerability", "pattern-matching", "zk-proof"]
categories = ["cryptography", "development-tools"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
regex = "1.10"
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "zkpm"
path = "src/bin/zkpm.rs"
