[workspace]
members = [
    "crates/pattern-types",
    "crates/pattern-loader",
    "crates/pattern-matcher",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Teycir Ben Soltane <teycir@pxdmail.net>"]
license = "MIT"
repository = "https://github.com/teycir/ZkPatternMatcher"

[package]
name = "zk-pattern-matcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "A pattern matching library for Zero-Knowledge proof vulnerability detection"
keywords = ["zero-knowledge", "security", "vulnerability", "pattern-matching", "zk-proof"]
categories = ["cryptography", "development-tools"]

[dependencies]
pattern-types = { path = "crates/pattern-types" }
pattern-loader = { path = "crates/pattern-loader" }
pattern-matcher = { path = "crates/pattern-matcher" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "zkpm"
path = "src/bin/zkpm.rs"
