[workspace]
members = [
    "crates/pattern-types",
    "crates/pattern-loader",
    "crates/pattern-matcher",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Teycir Ben Soltane <teycir@pxdmail.net>"]
license = "MIT"
repository = "https://github.com/Teycir/ZkPatternMatcher"
homepage = "https://github.com/Teycir/ZkPatternMatcher"
documentation = "https://docs.rs/zk-pattern-matcher"
readme = "README.md"

[package]
name = "zk-pattern-matcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
readme.workspace = true
description = "Pattern matching library for Zero-Knowledge proof circuit vulnerability detection"
keywords = ["zero-knowledge", "security", "vulnerability", "circom", "zk-proof"]
categories = ["cryptography", "development-tools"]

[dependencies]
pattern-types = { version = "0.1.0", path = "crates/pattern-types" }
pattern-loader = { version = "0.1.0", path = "crates/pattern-loader" }
pattern-matcher = { version = "0.1.0", path = "crates/pattern-matcher" }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"
regex = "1.10"
fancy-regex = "0.13"

[[bin]]
name = "zkpm"
path = "src/bin/zkpm.rs"

[dev-dependencies]
tempfile = "3.8"
