[package]
name = "pattern-loader"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "YAML pattern loader for ZK vulnerability detection"

[dependencies]
pattern-types = { version = "0.1.0", path = "../pattern-types" }
serde_yaml = "0.9"
anyhow = "1.0"

[dev-dependencies]
tempfile = "3.8"
